# traft

./: .clang-format  .gitignore  CMakeLists.txt
cmake/: concurrentqueue.cmake  fmt.cmake  spdlog.cmake  xxhash.cmake
src/: CMakeLists.txt  raft.h
src/storage/: CMakeLists.txt  segment.h
src/utils/: define.h
testing/common/: fiber_runtime.h
testing/module_test/: CMakeLists.txt  concurrentqueue_test.cc
traft/: CMakeLists.txt  raft.h
traft/concurrentqueue/: blockingconcurrentqueue_impl.h  concurrentqueue.h  concurrentqueue_impl.h  lightweightsemaphore.h
traft/raft/: CMakeLists.txt  ballot.cc  ballot.h  ballot_box.cc  ballot_box.h  configuration.cc  configuration.h  configuration_manager.cc  configuration_manager.h  fsm_caller.h  identity.cc  identity.h  log_entry.cc  log_entry.h  node.cc  node.h
traft/raft/proto/: CMakeLists.txt  identity.proto
traft/storage/: CMakeLists.txt  common.h  io_manager.cc  io_manager.h  segment.cc  segment.h  storage.h
traft/testing/: CMakeLists.txt
traft/testing/module_test/: CMakeLists.txt  concurrentqueue_test.cc
traft/testing/module_test/config/: fiber.yaml
traft/utils/: CMakeLists.txt  data.h  define.h  endpoint.h  error_code.h  logger.cc  logger.h  using.h
trpc/: CMakeLists.txt
trpc/coroutine/: fiber_semaphore.cc  fiber_semaphore.h
